# DVDBounce

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: DVDBouncer.cpp  DVDBouncer.hpp  main.cpp
